--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
   <div class="bg-lightGrey  h-screen flex flex-col text-align justify-center items-center ">
 
-    <div class="bg-white p-20 rounded-br-[96px] rounded-xl">
+    <div class="bg-white p-10 rounded-br-[96px] rounded-xl">
       <div class="flex gap-10">
         <div class="flex flex-col gap-1">
           <label for="" class="text-grey1">DAY</label>
@@ -51,7 +51,20 @@
         </div>
       </div>
 
-      <hr class="mt-10">
+      <div class="">
+        <hr class="mt-10 text-black w-[570px]">
+        <div class="bg-black w-20 h-20 flex justify-center items-center rounded-full absolute ml-[500px] -mt-10 cursor-pointer">
+          <img src="/assets/images/icon-arrow.svg" alt="" class="">
+          </div>
+        
+        </div>
+
+        <div>
+          <p class="text-8xl"> <span class="text-purple">38<span> years</p>
+          <p class="text-8xl"> <span class="text-purple">38<span> years</p>
+          <p class="text-8xl"> <span class="text-purple">38<span> years</p>
+          </div>
+      
     </div>
     <hr>
 
