--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
   <script src="index.js" defer></script>
+  <link rel="stylesheet" href="index.css">
 
   <title>Frontend Mentor | Age calculator app</title>
 
@@ -48,7 +49,7 @@ body {
         <div class="flex flex-col gap-1">
           <label for="day-input" class="text-grey1">DAY</label>
           <input id="day-input" type="text"
-            class="border h-14 w-32 rounded-md border border-grey text-black text-4xl px-5 focus:outline-none ring-1 focus:ring-purple">
+            class="border input h-14 w-32 rounded-md border border-grey text-black text-4xl px-5 focus:outline-none ring-1 focus:ring-purple">
         </div>
         <div class="flex flex-col gap-1">
           <label for="month-input" class="text-grey1">MONTH</label>
