--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body {
       </div>
 
       <div>
-        <hr class="mt-10 text-black w-[570px]">
+        <hr class="mt-10 text-black w-[570px] text-grey">
         <div
           class="bg-black w-20 h-20 flex justify-center items-center rounded-full absolute ml-[500px] -mt-10 cursor-pointer hover:bg-purple transition-colors duration-300">
           <img src="/assets/images/icon-arrow.svg" alt="" class="">
@@ -72,7 +72,7 @@ body {
 
       </div>
 
-      <div>
+      <div class="mt-10">
         <p class="text-8xl"> <span class="text-purple">--</span> years</p>
         <p class="text-8xl"> <span class="text-purple">--</span> months</p>
         <p class="text-8xl"> <span class="text-purple">--</span> days</p>
