--- a/index.html
+++ b/index.html
@@ -42,31 +42,31 @@ body {
 </head>
 
 <body>
-  <div class="bg-lightGrey  h-screen flex flex-col text-align justify-center items-center ">
+  <div class="bg-lightGrey h-screen flex flex-col text-align justify-center items-center ">
 
     <div class="bg-white p-10 rounded-br-[96px] rounded-xl">
       <div class="flex gap-10">
         <div class="flex flex-col gap-1">
           <label for="day-input" class="text-grey1">DAY</label>
           <input id="day-input" type="text"
-            class="border input h-14 w-32 rounded-md border border-grey text-black text-4xl px-5 focus:outline-none ring-1 focus:ring-purple">
+            class="border input md:h-14 md:w-32 h-14 w-22 rounded-md border border-grey text-black text-4xl px-5 focus:outline-none ring-1 focus:ring-purple">
         </div>
         <div class="flex flex-col gap-1">
           <label for="month-input" class="text-grey1">MONTH</label>
           <input id="month-input" type="text"
-            class="border h-14 w-32 rounded-md border border-grey text-black text-4xl px-5 focus:outline-none ring-1 focus:ring-purple">
+            class="border md:h-14 md:w-32 h-14 w-22 rounded-md border border-grey text-black text-4xl px-5 focus:outline-none ring-1 focus:ring-purple">
         </div>
         <div class="flex flex-col gap-1">
           <label for="year-input" class="text-grey1">YEAR</label>
           <input id="year-input" type="text"
-            class="border h-14 w-32 rounded-md border border-grey text-black text-4xl px-5 focus:outline-none ring-1 focus:ring-purple">
+            class="border md:h-14 md:w-32 h-14 w-22 rounded-md border border-grey text-black text-4xl px-5 focus:outline-none ring-1 focus:ring-purple">
         </div>
       </div>
 
-      <div>
-        <hr class="mt-10 text-black w-[570px] text-grey">
+      <div class="">
+        <hr class="mt-10 text-black md:w-[570px] w-40 text-grey">
         <div
-          class="bg-black w-20 h-20 flex justify-center items-center rounded-full absolute ml-[500px] -mt-10 cursor-pointer hover:bg-purple transition-colors duration-300">
+          class="bg-black w-20 h-20 flex justify-center items-center rounded-full absolute md:ml-[500px] -mt-10 cursor-pointer hover:bg-purple transition-colors duration-300">
           <img src="/assets/images/icon-arrow.svg" alt="" class="">
         </div>
 
@@ -83,7 +83,7 @@ body {
 
     <div class="attribution mt-40">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Hardelz</a>.
     </div>
   </div>
 
