--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body {
 </head>
 
 <body>
-  <div class="bg-lightGrey h-screen flex flex-col text-align justify-center items-center ">
+  <div class="bg-lightGrey  h-screen flex flex-col text-align justify-center items-center ">
 
     <div class="bg-white p-10 rounded-br-[96px] rounded-xl">
       <div class="flex gap-10">
@@ -66,16 +66,16 @@ body {
       <div class="">
         <hr class="mt-10 text-black md:w-[570px] w-40 text-grey">
         <div
-          class="bg-black w-20 h-20 flex justify-center items-center rounded-full absolute md:ml-[500px] -mt-10 cursor-pointer hover:bg-purple transition-colors duration-300">
+          class="bg-black md:w-20 md:h-20 w-16 h-16 flex justify-center items-center rounded-full absolute md:ml-[500px] -mt-10 cursor-pointer hover:bg-purple transition-colors duration-300">
           <img src="/assets/images/icon-arrow.svg" alt="" class="">
         </div>
 
       </div>
 
       <div class="mt-10">
-        <p class="text-8xl"> <span class="text-purple">--</span> years</p>
-        <p class="text-8xl"> <span class="text-purple">--</span> months</p>
-        <p class="text-8xl"> <span class="text-purple">--</span> days</p>
+        <p class="md:text-8xl text-6xl"> <span class="text-purple">--</span> years</p>
+        <p class="md:text-8xl text-6xl"> <span class="text-purple">--</span> months</p>
+        <p class="md:text-8xl text-6xl"> <span class="text-purple">--</span> days</p>
       </div>
 
     </div>
