--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@ body {
         </div>
       </div>
 
-      <div class="">
-        <hr class="mt-10 text-black md:w-[570px] w-40 text-grey">
+      <div class="flex flex-col items-center justify-center mt-20 md:-mt-20">
+        <hr class="mt-10 text-black md:w-[570px]  text-grey">
         <div
-          class="bg-black md:w-20 md:h-20 w-16 h-16 flex justify-center items-center rounded-full absolute md:ml-[500px] -mt-10 cursor-pointer hover:bg-purple transition-colors duration-300">
-          <img src="/assets/images/icon-arrow.svg" alt="" class="">
+          class="bg-black md:w-20 md:h-20 w-16 h-16 flex justify-center items-center rounded-full md:ml-[500px] -mt-10 cursor-pointer hover:bg-purple transition-colors duration-300">
+          <img src="/assets/images/icon-arrow.svg" alt="" class="w-7">
         </div>
 
       </div>
