--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ body {
         </div>
       </div>
 
-      <div class="flex flex-col items-center justify-center mt-20 md:-mt-20">
+      <div class="flex flex-col items-center justify-center mt-10 md:mt-5">
         <hr class="mt-10 text-black md:w-[570px]  text-grey">
         <div
           class="bg-black md:w-20 md:h-20 w-16 h-16 flex justify-center items-center rounded-full md:ml-[500px] -mt-10 cursor-pointer hover:bg-purple transition-colors duration-300">
@@ -72,7 +72,7 @@ body {
 
       </div>
 
-      <div class="mt-10">
+      <div class="">
         <p class="md:text-8xl text-6xl"> <span class="text-purple">--</span> years</p>
         <p class="md:text-8xl text-6xl"> <span class="text-purple">--</span> months</p>
         <p class="md:text-8xl text-6xl"> <span class="text-purple">--</span> days</p>
